implemented user registration and current user profile APIs with role based authorization